<resources>
    <string name="app_name">Auto.car</string>
    <string name="app_brief">自动开网络、蓝牙、导航等。</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="wlan_header">WLAN</string>
    <string name="bluetooth_header">蓝牙</string>
    <string name="navigation_header">导航</string>
    <string name="music_header">音乐</string>

    <!-- WLAN Preferences -->
    <string name="wlan_autoload_on_boot_title">开机自启</string>
    <string name="wlan_follow_bluetooth_title">当蓝牙设备连接时开启</string>

    <!-- Bluetooth Preferences -->
    <string name="bluetooth_autoload_on_boot_title">开机自启</string>

    <!-- Navigation Preferences -->
    <string name="navigation_autoload_on_boot_title">开机自启</string>
    <string name="navigation_app_info_title">默认导航应用</string>
    <string name="navigation_delay_interval_title">延时启动</string>

    <!-- Music Preferences -->
    <string name="music_autoload_on_boot_title">开机自启</string>
    <string name="music_app_info_title">默认音乐应用</string>
    <string name="music_delay_interval_title">延时启动</string>
</resources>